--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@
 	width: 100%;
 	height: 100vh;
 }
+
+.nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 2rem;
+	background-color: #fff;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
