--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
 	height: 100vh;
 }
 
+.layout {
+	display: grid;
+	grid-template-rows: 20px 1fr auto;
+	height: 100vh;
+}
+
 .nav {
 	display: flex;
 	justify-content: space-between;
@@ -10,4 +16,45 @@
 	padding: 0 2rem;
 	background-color: #fff;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#overlay-container {
+	width: 100%;
+	height: 100%;
+	background-color: transparent;
+}
+
+.overlay {
+	bottom: 8vh;
+	width: 100%;
+}
+
+.button-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+	padding: 1rem;
+	flex-grow: 1;
+	overflow: auto;
+
+	pointer-events: auto;
+}
+
+.button {
+	padding: 0.5rem 1rem;
+	border-radius: 0.2rem;
+	border-style: none;
+	color: #fff;
+	cursor: pointer;
+	background-color: red;
+}
+
+.button.active {
+	background-color: green;
+}
+
+.ar-button {
+	background-color: orange !important;
+	bottom: 12vh !important;
 }
