--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	gap: 1rem;
+	flex-wrap: wrap;
 	padding: 0 2rem;
 	background-color: #fff;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
